force-app/main/default/objects/Incentive_Multiplier__c/Incentive_Multiplier__c.object-meta.xml
<CustomObject>
    <label>Incentive Multiplier</label>
    <nameField>
        <displayFormat>IM-{000000}</displayFormat>
        <label>Incentive Multiplier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Multipliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>