force-app/main/default/objects/Incentive_Multiplier__c/fields/Percent_Success__c.field-meta.xml
<CustomField>
    <fullName>Percent_Success__c</fullName>
    <label>Percent Success</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>