force-app/main/default/objects/Incentive_Multiplier__c/fields/SSP_Max__c.field-meta.xml
<CustomField>
    <fullName>SSP_Max__c</fullName>
    <description>SSP max bound (&lt;)</description>
    <label>SSP Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>