force-app/main/default/objects/Incentive_Multiplier__c/fields/SSP_Start__c.field-meta.xml
<CustomField>
    <fullName>SSP_Start__c</fullName>
    <description>SSP start bound (&gt;=)</description>
    <label>SSP Start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>