force-app/main/default/objects/Incentive_Multiplier__c/fields/Target_max__c.field-meta.xml
<CustomField>
    <fullName>Target_max__c</fullName>
    <label>Target max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>