force-app/main/default/objects/Incentive_Multiplier__c/fields/Target_min__c.field-meta.xml
<CustomField>
    <fullName>Target_min__c</fullName>
    <label>Target min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>