force-app/main/default/objects/Incentive_Multiplier__c/listViews/All_Incentive.listView-meta.xml
<ListView>
    <fullName>All_Incentive</fullName>
    <columns>NAME</columns>
    <columns>Percent_Success__c</columns>
    <columns>SSP_Start__c</columns>
    <columns>SSP_Max__c</columns>
    <columns>Target_min__c</columns>
    <columns>Target_max__c</columns>
    <columns>Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Incentive</label>
</ListView>